--- a/spectacular-config.yaml
+++ b/spectacular-config.yaml
@@ -1,15 +1,6 @@
 name: Specmore Demo Catalogue
 description: A demo catalogue of interface specification openly available on the internet.
 spec-files: 
-- repo: OAI/OpenAPI-Specification
-  file-path: examples/v3.0/api-with-examples.yaml
-- repo: OAI/OpenAPI-Specification
-  file-path: examples/v3.0/callback-example.yaml
-- repo: OAI/OpenAPI-Specification
-  file-path: examples/v3.0/link-example.yaml
-- repo: OAI/OpenAPI-Specification
-  file-path: examples/v3.0/petstore.yaml
+- file-path: specs/movie-ratings.yaml
 - repo: OAI/OpenAPI-Specification
   file-path: examples/v3.0/petstore-expanded.yaml
-- repo: OAI/OpenAPI-Specification
-  file-path: examples/v3.0/uspto.yaml
